# four_phi_model

./: LICENSE  README.md
doc/: Appendix_manual.tex  input  manual_v0.12.txt  notes_pimc.txt
four_phi_model_3d/: #four_phi_model_3d.f90#  #m_mc.f90#  #m_mc_parameters.F90#  #m_system_3d.F90#  #m_system_3d_md.f90#  #m_t_pimc_parameters.F90#  .#m_mc_parameters.F90  CMakeLists.txt  Makefile  Makefile.nano  Makefile.nano~  TCF.f90  TCF.f90.old_120614  TCF.f90~  add_ft_tcf.f90  bandstructure.f90.121001  bandstructure.f90~  bandstructure_average.f90  bandstructure_average.f90~  bandstructure_new  bandstructure_new.f90  bandstructure_new.f90.120416  bandstructure_new.f90.121001  bandstructure_new.f90~  devel_120424.tgz  four_phi_model_3d-1dop  four_phi_model_3d.F90.old  four_phi_model_3d.f90  four_phi_model_3d.f90~  four_phi_model_3d_scalar.f90  m_TCF.f90~  m_averages.F90~  m_averages.f90.orig  m_averages.f90~  m_averages_func.f90.old  m_averages_func.f90.orig  m_averages_func.f90~  m_averages_func_new.F90  m_averages_new.F90  m_bandstructure.f90  (+32 more)
four_phi_model_3d/doc/: #manual#  input_eq  manual.txt~
four_phi_model_3d/test/test1/: input  out
four_phi_model_3d/test/test2/: bandstructure.inp  bandstructure.inp~  bandstructure.out  fort.10  fort.9  input  out
phi4_lattice/: CMakeLists.txt  Makefile~  bandstructure.F90  cmake_install.cmake  m_averages.F90  m_averages_func_new.F90  m_averages_new.F90  m_hist.F90  m_input.F90  m_mc.F90  m_pimc.F90  m_pimc_energies.F90  m_system_3d.F90  m_t_pimc_parameters.F90  parameters.F90  symmetrize_TCF.f90
phi4_lattice/test/test1/: fort.50  mc_1.0.restart
phi4_lattice/test/test2/: fort.8  mc_1.0.restart
source/: CMakeLists.txt  CMakeLists.txt~  Makefile.mac  TCF.f90  bandstructure.F90  example_external.F90  m_FFT.f90  m_TCF.F90  m_TCF.f90~  m_averages_func_new.F90  m_averages_new.F90  m_hist.F90  m_input.F90  m_input.F90~  m_mc_parameters.F90  m_mc_utils.F90  m_md.F90  m_moment_fitting.F90  m_pimc.F90  m_pimc_energies.F90~  m_strings.F90  m_system_3d.F90  m_t_pimc_parameters.F90  normalize.F90  phi4_lattice.F90
test/test1/: fort.8  input~
test/test2/: fort.13  fort.50  test.restart
